(intermediate) testing CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,7 @@ jobs:
         with:
           name: test_results_xml
           path: ${{runner.workspace}}/build/test-results/**/*.xml
+
+      - name: Valgrind Memcheck
+          working-directory: ${{runner.workspace}}/build
+          run: valgrind basic_test
