(intermediate) testing CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Valgrind Memcheck
           working-directory: ${{runner.workspace}}/build
-          run: valgrind basic_test
+          #run: valgrind basic_test
