--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(
         basic_test
         basic_test.cpp)
 
+add_compile_options(-fprofile-arcs -ftest-coverage)
 target_link_libraries(
         basic_test
         gtest_main
