--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-project(C1)
+project(C2)
 
 set(CMAKE_C_STANDARD 99)
 
@@ -12,10 +12,10 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 
-add_library(form input.c input.h form.c form.h)
-add_executable(C1 main.c)
+add_library(data input.c input.h data.c data.h)
+add_executable(C2 main.c)
 
-target_link_libraries(C1 form)
+target_link_libraries(C2 data)
 
 add_executable(
         basic_test
