multi-threaded sorting (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library(data input.c input.h data.c data.h)
 add_subdirectory(report)
 add_executable(C2 main.c)
 
-target_link_libraries(C2 st_report data)
+target_link_libraries(C2 mt_report data)
 
 add_executable(
         basic_test
