--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,22 @@ cmake_minimum_required(VERSION 3.0)
 # Указать характеристики проекта:
 project(null VERSION 1.0.0 LANGUAGES C CXX)
 
+
+
 include_directories(ServerClient/server ServerClient/client ServerClient/boost_1_79_0 ServerClient/)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+
+
 
 # client
 add_library(client STATIC ServerClient/client/client.cpp)
 add_executable(client.out ServerClient/client/main.cpp)
 target_link_libraries(client.out client)
+
+# ui
+
+add_subdirectory(ui/)
 
 # server
 add_library(server STATIC ServerClient/server/server.cpp)
