--- a/.gitignore
+++ b/.gitignore
@@ -63,7 +63,9 @@ Thumbs.db
 
 build-ui-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/
 */cmake-build-debug/
+cmake-build-debug/
 
+*.user
 
 # MinGW generated files
 *.Debug
