--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,8 @@ Thumbs.db
 
 build-ui-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/
 */cmake-build-debug/
+cmake-build-debug/
+*.user
 
 
 # MinGW generated files
