--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,7 @@ add_executable(server.out ServerClient/server/main.cpp)
 target_link_libraries(server.out server)
 
 # ui
-add_subdirectory(ui)
+#add_subdirectory(ui)
+
+# logic
+add_subdirectory(logic)
