added client logic

--- a/ui/fragments/CMakeLists.txt
+++ b/ui/fragments/CMakeLists.txt
@@ -12,5 +12,6 @@ add_library(fragments STATIC
         src/mainwindow.cpp
         src/fragmentnavigator.cpp
         )
+add_subdirectory(logic)
 target_include_directories(fragments PUBLIC include)
-target_link_libraries(fragments PUBLIC Qt${QT_VERSION_MAJOR}::Widgets abstract)
+target_link_libraries(fragments PUBLIC Qt${QT_VERSION_MAJOR}::Widgets abstract logic)
