final version of my work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,5 @@ add_library(server STATIC ServerClient/server/server.cpp)
 add_executable(server.out ServerClient/server/main.cpp)
 target_link_libraries(server.out server)
 
-# ui
-add_subdirectory(ui)
+# logic
+add_subdirectory(logic)
